--- a/SimpleWeather.UWP/Assets/Credits/licenses.html
+++ b/SimpleWeather.UWP/Assets/Credits/licenses.html
@@ -1,7 +1,7 @@
-﻿<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style> body { font-family: sans-serif; } pre { background-color: #eeeeee; padding: 1em; white-space: pre-wrap; word-wrap: break-word; } </style></head><body>
+﻿<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style> body { font-family: sans-serif; } a { padding: 1em 0px 1em 0px; } p { background-color: #eeeeee; font-family: Consolas; padding: 1em; white-space: pre-wrap; word-wrap: break-word; } </style></head><body>
 
 <a href="https://github.com/Microsoft/UWPCommunityToolkit">Microsoft UWP Community Toolkit</a>
-<pre>The MIT License (MIT)
+<p>The MIT License (MIT)
 
 Copyright (c) .NET Foundation and Contributors
 
@@ -23,10 +23,10 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 
-</pre>
+</p>
 
 <a href="http://www.newtonsoft.com/json">Newtonsoft.Json</a>
-<pre>The MIT License (MIT)
+<p>The MIT License (MIT)
 
 Copyright (c) 2007 James Newton-King
 
@@ -47,10 +47,10 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
-</pre>
+</p>
 
 <a href="https://github.com/nodatime/nodatime">NodaTime</a>
-<pre>Copyright (C) 2015 The Noda Time Authors
+<p>Copyright (C) 2015 The Noda Time Authors
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -62,10 +62,10 @@ Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
-limitations under the License.</pre>
+limitations under the License.</p>
 
 <a href="https://github.com/praeclarum/sqlite-net">SQLite-net</a>
-<pre>The MIT License (MIT)
+<p>The MIT License (MIT)
 
 Copyright (c) 2009-2016 Krueger Systems, Inc.
 
@@ -86,10 +86,10 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
-</pre>
+</p>
     
 <a href="https://bitbucket.org/twincoders/sqlite-net-extensions">SQLite-net Extensions</a>
-<pre>The MIT License (MIT)
+<p>The MIT License (MIT)
 
 Copyright (C) 2013 TwinCoders S.L.
 
@@ -110,10 +110,10 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
-</pre>
+</p>
     
 <a href="http://weathericons.io/">WeatherIcons</a>
-<pre>Author - Erik Flowers - erik@helloerik.com
+<p>Author - Erik Flowers - erik@helloerik.com
 
 Font licensed under SIL OFL 1.1
 http://scripts.sil.org/OFL
@@ -123,6 +123,6 @@ http://creativecommons.org/licenses/by/3.0/
 
 Inspired by and works great as a companion with Font Awesome
 "Font Awesome by Dave Gandy - http://fontawesome.io"
-</pre>
+</p>
 
 </body></html>
